logo aligned and nav-color fixed

--- a/my-app/src/components/Footer/footer.css
+++ b/my-app/src/components/Footer/footer.css
@@ -1,6 +1,6 @@
 /* Footer.css */
 footer {
-    background-color: #000;
+    background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
